# grok_reg-protocol_cpa

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  account_convert.py  config.example.json  cpa_export.py  gpt_agent.py  gpt_register_flow.py  grok_register_ttk.py  mise.toml  protocol_register.py  proxy_pool.py  proxy_relay.py  pyproject.toml  register_cli.py  sentinel_token.py
.github/deploy-keys/: grokfree-delivery.pub
.github/scripts/: bootstrap-grokfree-delivery.sh  deploy-remote.sh
cpa_xai/: browser_confirm.py  mint.py  probe.py  proxyutil.py
local_solver/: README.md  TurnstileSolver.bat  api_solver.py  browser_configs.py  db_results.py  proxies.txt.example  requirements.txt  turnstile_engine.py
scripts/: backfill_cpa_xai_from_accounts.py
sentinel_vm/: gen_token_jsdom.js
tests/: test_account_convert.py  test_cliproxy_management.py  test_concurrency_limits.py  test_cpa_health.py  test_cpa_mint_flow.py  test_local_solver_api_proxy.py  test_local_solver_linux.py  test_mail_verification.py  test_protocol_register.py  test_proxy_pool.py  test_proxy_runtime_improvements.py  test_webui_backfill_concurrency.py  test_webui_cpa_filters.py  test_webui_cpa_governance_v2.py  test_webui_cpa_pool_history.py  test_webui_cpa_pool_recovery.py  test_webui_cpa_pool_refill.py  test_webui_gpt_register.py  test_webui_mail_tools.py  test_webui_protocol_options.py  test_webui_timeutil.py
webui/: __init__.py  app.py  cliproxy_management.py  cpa_health.py  cpa_pool.py  cpa_pool_store.py  gpt_register.py  jobs.py  mail_tools.py  server.py  store.py  timeutil.py
(+9 files in other folders)
